using http-auth-interceptor service to intercerpt 401 response

--- a/server/public/client/app/index.html
+++ b/server/public/client/app/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 </head>
-<body data-ng-app="app">
+<body data-ng-app="app" class="http-auth-app">
 
     <div data-ng-view></div>
     
@@ -27,6 +27,7 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="bower_components/angular-http-auth/src/http-auth-interceptor.js"></script>
     <!-- endbuild -->
     <script type="text/javascript">
         $(document).ready(function(){
